@@ -1,16 +1,2 @@
--Xms128m
 -Xmx1800m
--XX:ReservedCodeCacheSize=512m
--XX:+IgnoreUnrecognizedVMOptions
--XX:+UseG1GC
--XX:SoftRefLRUPolicyMSPerMB=50
--XX:CICompilerCount=2
--XX:+HeapDumpOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--ea
--Dsun.io.useCanonCaches=false
--Djdk.http.auth.tunneling.disabledSchemes=""
--Djdk.attach.allowAttachSelf=true
--Djdk.module.illegalAccess.silent=true
--Dkotlinx.coroutines.debug=off
 -Dfile.encoding=UTF-8
